# stickerpicker

./: .editorconfig  .gitattributes  .gitignore  .gitlab-ci.yml  .python-version  README.md  example-config.json  import.py  optional-requirements.txt  pyproject.toml  requirements.txt  scalar-convert.py  setup.py
.github/workflows/: release_zip.yml
giphyproxy/: Dockerfile  example-config.yaml  go.mod  go.sum  main.go
packs/: README.md  scalar-geeko.json  scalar-smilies.json  scalar-stakey.json
packs/gifs/: pack.json
packs/pusheen/: pack.json
src/: __init__.py  pack.py  stickerimport.py
src/lib/: matrix.py  util.py
sticker/: download_thumbnails.py  get_version.py  import.py  pack.py  scalar_convert.py  stickerimport.py  version.py
sticker/lib/: matrix.py  util.py
sticker/server/: __main__.py  config.py  example-config.yaml  frontend  server.py  static.py
web/: .eslintrc.json  esinstall.js  index.css  index.html  index.js  index.sass  package.json  spinner.js  widget-api.js
web/packs/: Aida_ww_by_demybot.json  AphTwin.json  Batska.json  Bikaloh.json  Blyat_Valhalla.json  BrassicStickers.json  CP_Extended.json  CatPusheen.json  ChairmanMao.json  Closedparty.json  DEVINsOpPaCk.json  DSW_S.json  FSB_BORTNIKOV.json  FlynnFlyunyua.json  Gensek.json  Hyper_cats.json  Ilalox2288.json  JahySamaWaKujikenai.json  K10f1b91219abafa4cc4a_by_StickerStealRobot.json  Kaguya_sama_WWA_TV2.json  Kukoyakavasya.json  LSPteam.json  Linerlys_Sticker_Pack.json  MPD_Sticker_Pack.json  Mari4ka_UHP.json  Moedog.json  Mokocchi.json  NBstickeriaPPS.json  (+62 more)
yotsuba/: pack.json
(+47 files in other folders)
